--- a/LLM_BART_classifier.ipynb
+++ b/LLM_BART_classifier.ipynb
@@ -46,32 +46,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lekshmanannatarajan/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "Device set to use mps:0\n"
      ]
     }
    ],
    "source": [
     "from transformers import pipeline\n",
-    "classifier = pipeline(\"zero-shot-classification\",\n",
-    "                      model=\"facebook/bart-large-mnli\")"
+    "\n",
+    "# classifier = pipeline(\"zero-shot-classification\",\n",
+    "#                       model=\"huawei-noah/TinyBERT_General_4L_312D\")\n",
+    "\n",
+    "# classifier = pipeline(\"zero-shot-classification\",\n",
+    "#                       model=\"distilbert/distilbert-base-uncased-finetuned-sst-2-english\")\n",
+    "\n",
+    "# classifier = pipeline(\"zero-shot-classification\",\n",
+    "#                       model=\"google-bert/bert-base-uncased\")\n",
+    "\n",
+    "# classifier = pipeline(\"zero-shot-classification\",\n",
+    "#                       model=\"microsoft/Phi-3.5-mini-instruct\")\n",
+    "\n",
+    "# Slower but robust\n",
+    "# Takes about 50seconds to initialize and about 4s to classify\n",
+    "# Made for NLI (natural language inference) classification\n",
+    "# 420 million parameters\n",
+    "# https://huggingface.co/facebook/bart-large-mnli\n",
+    "# classifier = pipeline(\"zero-shot-classification\",\n",
+    "#                       model=\"facebook/bart-large-mnli\")\n",
+    "\n",
+    "# ## faster \n",
+    "# classifier = pipeline(\"zero-shot-classification\",\n",
+    "#                       model=\"cross-encoder/nli-roberta-base\")\n",
+    "\n",
+    "# Not meant for classification, final layer is not trained and intialized with random weights\n",
+    "# classifier = pipeline(\"zero-shot-classification\",\n",
+    "#                       model=\"meta-llama/Llama-3.2-1B\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sequence': 'Should I see a nurse?',\n",
+       " 'labels': ['Health', 'Science', 'Finance'],\n",
+       " 'scores': [0.9697425365447998, 0.015606545843183994, 0.014650937169790268]}"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sequence_to_classify = \"one day I will see the world\"\n",
-    "candidate_labels = ['travel', 'cooking', 'dancing']\n",
+    "candidate_labels = ['Finance', \n",
+    "                    'Health',\n",
+    "                    'Science',]\n",
+    "\n",
+    "\n",
+    "# sequence_to_classify =   '''How much money do I need to retire?'''\n",
+    "sequence_to_classify =   '''Should I see a nurse?'''\n",
+    "# sequence_to_classify =   '''How does a jet propulsion work?'''\n",
+    "\n",
+    "\n",
     "classifier(sequence_to_classify, candidate_labels)"
    ]
   }
