--- a/training_data_generator.ipynb
+++ b/training_data_generator.ipynb
@@ -12,47 +12,6 @@
       "/Users/lekshmanannatarajan/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sn.no</th>\n",
-       "      <th>user_prompt</th>\n",
-       "      <th>truth_lable</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Sn.no, user_prompt, truth_lable]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -66,10 +25,7 @@
     "with open('/Users/lekshmanannatarajan/Library/CloudStorage/GoogleDrive-zuari1993@gmail.com/My Drive/Colab Notebooks/config.txt', 'r') as config_file:\n",
     "    config = json.load(config_file)\n",
     "API_KEY = config[\"API_KEY\"]\n",
-    "genai.configure(api_key=API_KEY)\n",
-    "\n",
-    "synthetic_train_data = pd.DataFrame(columns = ['Sn.no', 'user_prompt', 'truth_lable'])\n",
-    "synthetic_train_data"
+    "genai.configure(api_key=API_KEY)"
    ]
   },
   {
@@ -101,46 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = genai.GenerativeModel(GEMINI_MODELS['FLASH']\n",
-    "#                             , system_instruction= \"create varied, human-like responses, avoiding repetition\"\n",
-    "#                                 , generation_config = generation_config\n",
-    "#                                 , safety_settings = model_safety_settings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# response = model.generate_content(contents = [\"\"\"\n",
-    "# I need training/validation data to fine tune a LLM classifier I am building. It will classify user prompts to either ['help me brainstorm', 'summarize this report for me']. Generate 5 prompts for each of the mentioned categories.\n",
-    "# \"\"\"])\n",
+    "catagories_ = ['help me brainstorm', 'summarize this report for me', 'explain how to solve with steps', 'check if this was AI generated']\n",
     "\n",
-    "# print(response.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{\"prompt\": \"Suggest creative marketing campaign ideas for a new sustainable fashion brand.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"I need innovative ideas for a mobile game that incorporates augmented reality.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"Help me brainstorm potential solutions to reduce traffic congestion in urban areas.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"Let's brainstorm unique gift ideas for a friend who loves to travel.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"Brainstorm potential storylines for a science fiction novel with a female protagonist.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"I need ideas for a fundraising event to support a local animal shelter.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"Help me brainstorm ways to improve employee engagement and morale at my company.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"Let's brainstorm potential names for a new coffee shop in a historic district.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"Brainstorm creative solutions for reducing plastic waste in our community.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"I need ideas for a team-building activity that encourages collaboration and problem-solving.\", \"truth_label\": \"help me brainstorm\"}, {\"prompt\": \"Summarize the key findings and recommendations from the market research report on consumer preferences for electric vehicles.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Give me a concise summary of the annual financial report, highlighting key performance indicators and areas for improvement.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Summarize the main points of the scientific study on the effects of climate change on coastal ecosystems.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Please provide a brief summary of the latest quarterly earnings report, focusing on revenue growth and profitability.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Summarize the executive summary of the project proposal for the new software development initiative.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Give me a concise summary of the legal document outlining the terms and conditions of the contract.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Summarize the findings of the customer satisfaction survey, highlighting key areas of strength and weakness.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Please provide a brief summary of the environmental impact assessment report for the proposed construction project.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Summarize the research paper on the effectiveness of different teaching methods in improving student learning outcomes.\", \"truth_label\": \"summarize this report for me\"}, {\"prompt\": \"Give me a concise summary of the medical report detailing the patient's diagnosis, treatment plan, and prognosis.\", \"truth_label\": \"summarize this report for me\"}]\n"
-     ]
-    }
-   ],
-   "source": [
     "# Define the configuration with structured output\n",
     "generation_config = genai.GenerationConfig(\n",
-    "    max_output_tokens=1000,\n",
+    "    max_output_tokens=8000,\n",
     "    temperature=0.7,\n",
     "    top_k=1,\n",
     "    top_p=0.95,\n",
@@ -151,7 +76,7 @@
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
     "                \"prompt\": {\"type\": \"string\", \"description\": \"Generated user prompt\"},\n",
-    "                \"truth_label\": {\"type\": \"string\", \"enum\": [\"help me brainstorm\", \"summarize this report for me\"]}\n",
+    "                \"truth_label\": {\"type\": \"string\", \"enum\": f\"{catagories_}\"}\n",
     "            },\n",
     "            \"required\": [\"prompt\", \"truth_label\"]\n",
     "        }\n",
@@ -160,10 +85,9 @@
     "\n",
     "# Create the model\n",
     "gemini_model = genai.GenerativeModel(\n",
-    "    model_name=GEMINI_MODELS['FLASH'],\n",
+    "    model_name=GEMINI_MODELS['PRO'],\n",
     "    system_instruction=(\n",
-    "        \"You are an AI agent trained to generate structured output.\"\n",
-    "        \"for each category in ['help me brainstorm', 'summarize this report for me'].\"\n",
+    "        \"You are an AI agent trained to generate structured output\"\n",
     "        \"Ensure the output adheres to the defined JSON schema.\"\n",
     "    ),\n",
     "    generation_config=generation_config,\n",
@@ -172,7 +96,7 @@
     "\n",
     "# Generate structured content\n",
     "response = gemini_model.generate_content(\n",
-    "    contents=[\"\"\"I need training/validation data to fine-tune a LLM classifier. Generate 10 prompts for each category.\"\"\"])\n",
+    "    contents=[f\"\"\"I need training/validation data to fine-tune a LLM classifier. Generate 10 prompts for each category in {catagories_} like how a student in college would ask\"\"\"])\n",
     "    \n",
     "# Print the JSON output\n",
     "print(response.text)"
@@ -180,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,102 +135,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Suggest creative marketing campaign ideas for ...</td>\n",
+       "      <td>I need help brainstorming ideas for my history...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>I need innovative ideas for a mobile game that...</td>\n",
+       "      <td>Brainstorm with me: I'm making a short film an...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Help me brainstorm potential solutions to redu...</td>\n",
+       "      <td>Help me brainstorm some fun activities for a c...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Let's brainstorm unique gift ideas for a frien...</td>\n",
+       "      <td>I'm starting a small business.  Help me brains...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Brainstorm potential storylines for a science ...</td>\n",
+       "      <td>I'm writing a poem about nature.  Can you help...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>I need ideas for a fundraising event to suppor...</td>\n",
+       "      <td>Help me brainstorm some persuasive arguments f...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Help me brainstorm ways to improve employee en...</td>\n",
+       "      <td>I need to brainstorm some healthy and easy mea...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Let's brainstorm potential names for a new cof...</td>\n",
+       "      <td>Can you help me brainstorm some creative ways ...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Brainstorm creative solutions for reducing pla...</td>\n",
+       "      <td>I'm stuck on this coding problem.  Can you hel...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>I need ideas for a team-building activity that...</td>\n",
+       "      <td>Help me brainstorm some potential research top...</td>\n",
        "      <td>help me brainstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Summarize the key findings and recommendations...</td>\n",
+       "      <td>Can you summarize this report on the effects o...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Give me a concise summary of the annual financ...</td>\n",
+       "      <td>I have a 50-page report on climate change. I d...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>Summarize the main points of the scientific st...</td>\n",
+       "      <td>Summarize this article on the history of the O...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Please provide a brief summary of the latest q...</td>\n",
+       "      <td>I've got a dense research paper on quantum phy...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Summarize the executive summary of the project...</td>\n",
+       "      <td>This market analysis report is way too long. C...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Give me a concise summary of the legal documen...</td>\n",
+       "      <td>Can you summarize this report on the current s...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>Summarize the findings of the customer satisfa...</td>\n",
+       "      <td>Summarize this case study on successful busine...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Please provide a brief summary of the environm...</td>\n",
+       "      <td>I need you to summarize this scientific report...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>Summarize the research paper on the effectiven...</td>\n",
+       "      <td>Can you summarize this report on the impact of...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>Give me a concise summary of the medical repor...</td>\n",
+       "      <td>This report on renewable energy is pretty tech...</td>\n",
        "      <td>summarize this report for me</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -315,26 +239,26 @@
       ],
       "text/plain": [
        "                                               prompt  \\\n",
-       "0   Suggest creative marketing campaign ideas for ...   \n",
-       "1   I need innovative ideas for a mobile game that...   \n",
-       "2   Help me brainstorm potential solutions to redu...   \n",
-       "3   Let's brainstorm unique gift ideas for a frien...   \n",
-       "4   Brainstorm potential storylines for a science ...   \n",
-       "5   I need ideas for a fundraising event to suppor...   \n",
-       "6   Help me brainstorm ways to improve employee en...   \n",
-       "7   Let's brainstorm potential names for a new cof...   \n",
-       "8   Brainstorm creative solutions for reducing pla...   \n",
-       "9   I need ideas for a team-building activity that...   \n",
-       "10  Summarize the key findings and recommendations...   \n",
-       "11  Give me a concise summary of the annual financ...   \n",
-       "12  Summarize the main points of the scientific st...   \n",
-       "13  Please provide a brief summary of the latest q...   \n",
-       "14  Summarize the executive summary of the project...   \n",
-       "15  Give me a concise summary of the legal documen...   \n",
-       "16  Summarize the findings of the customer satisfa...   \n",
-       "17  Please provide a brief summary of the environm...   \n",
-       "18  Summarize the research paper on the effectiven...   \n",
-       "19  Give me a concise summary of the medical repor...   \n",
+       "0   I need help brainstorming ideas for my history...   \n",
+       "1   Brainstorm with me: I'm making a short film an...   \n",
+       "2   Help me brainstorm some fun activities for a c...   \n",
+       "3   I'm starting a small business.  Help me brains...   \n",
+       "4   I'm writing a poem about nature.  Can you help...   \n",
+       "5   Help me brainstorm some persuasive arguments f...   \n",
+       "6   I need to brainstorm some healthy and easy mea...   \n",
+       "7   Can you help me brainstorm some creative ways ...   \n",
+       "8   I'm stuck on this coding problem.  Can you hel...   \n",
+       "9   Help me brainstorm some potential research top...   \n",
+       "10  Can you summarize this report on the effects o...   \n",
+       "11  I have a 50-page report on climate change. I d...   \n",
+       "12  Summarize this article on the history of the O...   \n",
+       "13  I've got a dense research paper on quantum phy...   \n",
+       "14  This market analysis report is way too long. C...   \n",
+       "15  Can you summarize this report on the current s...   \n",
+       "16  Summarize this case study on successful busine...   \n",
+       "17  I need you to summarize this scientific report...   \n",
+       "18  Can you summarize this report on the impact of...   \n",
+       "19  This report on renewable energy is pretty tech...   \n",
        "\n",
        "                     truth_label  \n",
        "0             help me brainstorm  \n",
@@ -359,13 +283,14 @@
        "19  summarize this report for me  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(json.loads(response.text))"
+    "pd.DataFrame(json.loads(response.text)).to_csv(\"./data_local/outputs/synthetic_test_prompts.csv\", index=False)\n",
+    "pd.DataFrame(json.loads(response.text)).head(20)"
    ]
   }
  ],
